--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <table align="center" cellpadding="0" cellspacing="0" border="0" role="presentation" style="width:640px;margin:0 auto;" class="full">
   <tbody><tr>
-    <td align="center" style="padding:20px 0 23px;"><a href="homegoods.com" style="text-decoration:none;color:#BF0D3E;" target="_blank"><img src="assets/logo.png" width="221" border="0" alt="HomeGoods" id="Logo"></a></td>
+    <td align="center" style="padding:20px 0 23px;"><a href="https://www.homegoods.com/us/store/index.jsp" style="text-decoration:none;color:#BF0D3E;" target="_blank"><img src="assets/logo.png" width="221" border="0" alt="HomeGoods" id="Logo"></a></td>
   </tr>
 </tbody></table>
 
