--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 					  <br>&nbsp;<br>
 					  
 				    
-				    <sup>2</sup>Please visit the <a href=“https://www.homegoods.com/us/store/jump/topic/find-help/shipping-%26-delivery/2400098?searchTerm=shipping” target="“_blank”" style="text-decoration:underline;color:{{ $TextColor }};">Shipping &amp; Delivery page</a> for complete details.<br><br>*Prices are representative. Actual prices as marked. Styles vary by store and online. Compare At prices are based on comparison to regular prices of comparable items at full-price department or&nbsp;specialty&nbsp;retailers.<br>&nbsp;<br>
+				    <sup>2</sup>Please visit the <a href=“https://www.homegoods.com/us/store/jump/topic/find-help/shipping-%26-delivery/2400098” target="“_blank”" style="text-decoration:underline;color:{{ $TextColor }};">Shipping &amp; Delivery page</a> for complete details.<br><br>*Prices are representative. Actual prices as marked. Styles vary by store and online. Compare At prices are based on comparison to regular prices of comparable items at full-price department or&nbsp;specialty&nbsp;retailers.<br>&nbsp;<br>
             See our <a href="https://www.homegoods.com/us/store/jump/topic/find-help/legal/2400080#privacypolicy" style="text-decoration:underline;color:#5B6770;" target="_blank">privacy policy</a><span>&nbsp; | &nbsp;</span>
             <a href="https://www.homegoods.com/us/store/jump/topic/find-help/legal/2400080#termsofuse" style="text-decoration:underline;color:#5B6770;" target="_blank">terms&nbsp;of&nbsp;use</a><span>&nbsp; | &nbsp;</span>
             <a href="https://www.homegoods.com/us/store/index.jsp" style="text-decoration:underline;color:#5B6770;" target="_blank">HomeGoods&shy;.c&shy;om</a>
